# DeepCubeAI

./: .gitignore  LICENSE  MANIFEST.in  README.md  deepcubeai.sh  environment.yaml  environment_macos.yaml  pyproject.toml  requirements.txt  setup.sh
 reproduce_results/:  reproduce_digitjump.sh
.github/workflows/: python_to_pypi.yml
deepcubeai/: __init__.py  main.py
deepcubeai/environments/: cube3.py  digit_jump.py  environment_abstract.py  ice_slider.py  sokoban.py
deepcubeai/extra/: convert_sokoban.py  offline_data_viz.py  plot_disc_vs_cont.py  plot_perf.py
deepcubeai/scripts/: help.sh  (+8 more)
environments/: cube3.py  digit_jump.py  environment_abstract.py  ice_slider.py  sokoban.py
extra/: convert_sokoban.py  offline_data_viz.py  plot_disc_vs_cont.py  plot_perf.py
job_submissions/: submit_cube3.sh  submit_cube3_ddp_heur.sh  submit_digitjump.sh  submit_digitjump_ddp_heur.sh  submit_iceslider.sh  submit_iceslider_ddp_heur.sh  submit_sokoban.sh  submit_sokoban_ddp_heur.sh
plots/: cube3_mse_100eps_10000steps_1.txt
reproduce_results/: reproduce_cube3.sh  reproduce_digitjump.sh  reproduce_iceslider.sh  reproduce_sokoban.sh
scripts/: compare_solutions.py  encode_offline_data.py  generate_offline_data.py  generate_search_test_data.py  pipeline.sh  pipeline_arg_handler.sh  test_model_cont.py  test_model_disc.py
search_methods/: gbfs_imag.py  qstar_imag.py  ucs_imag.py
training/: qlearning.py  qlearning_dist.py  train_env_cont.py  train_env_disc.py
utils/: data_utils.py  dist_utils.py  env_utils.py  misc_utils.py  nnet_utils.py  pytorch_models.py  search_utils.py  update_utils.py
visualizers/: cube3_viz.py  cube3_viz_simple.py
(+42 files in other folders)
